Fix garbage collection of common symbols for powerpc64

I forgot powerpc64 has its own gc_mark_dynamic_ref.

	PR ld/17615
	* elf64-ppc.c (ppc64_elf_gc_mark_dynamic_ref): Don't drop
	ELF_COMMON_DEF syms.